--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
-body{
-  background-color: gray;
+a.active{
+  outline: 1px solid red;
 }
