--- a/src/app/shop/catalog/catalog.component.html
+++ b/src/app/shop/catalog/catalog.component.html
@@ -1,12 +1,37 @@
-<p>catalog works! 1</p>
+{{test}}
+<div class="container py-3">
+  <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
+    <h1 class="display-4 fw-light">{{response?.h1}}</h1>
+    <p class="fs-5 text-muted">{{response?.text}}</p>
+  </div>
+</div>
 
-<h1>{{response?.h1}}</h1>
+<main class="container">
+  <div class="row row-cols-1 row-cols-md-3 mb-3 text-center" *ngIf="response">
 
+    <div class="col" *ngFor="let item of response.products|keyvalue">
+      <div class="card mb-4 rounded-0 shadow-sm">
+        <div class="card-header py-3">
+          <h4 class="my-0 fw-normal">{{item.value.name}}</h4>
+        </div>
+        <div class="card-body">
+          <a [routerLink]="[item.key]">
+            <img class="card-img-top" src="{{item.value.image}}" alt="{{item.value.name}}">
+          </a>
+          <div class="card-title h2 pricing-card-title">{{item.value.price|currency:" ":false:"1.2-2"}} <small class="text-muted fw-light">грн</small></div>
+          <p class="mt-3 mb-4 card-desc">
+            {{item.value.text}}
+          </p>
+          <button (click)="addCart({
+            code: item.key,
+            name: item.value.name,
+            price: item.value.price,
+            image: item.value.image,
+            qty: 1
+          }, $event)" type="button" class="w-100 btn btn-lg btn-primary rounded-0">Купить</button>
+        </div>
+      </div>
+    </div>
 
-<ul *ngIf="response">
-  <li *ngFor="let item of response.products|keyvalue">
-    {{item.value.name}}
-  </li>
-</ul>
-
-<article>{{response?.text}}</article>
+  </div>
+</main>
