--- a/src/app/shop/product/product.component.html
+++ b/src/app/shop/product/product.component.html
@@ -1,3 +1,20 @@
-<h1>{{response?.name}}</h1>
+<div class="container py-4">
+  <h1 class="display-4 fw-light text-center ">{{response?.name}}</h1>
+</div>
 
-<img src="{{response?.image}}" alt="{{response?.name}}">
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 d-flex justify-content-center">
+      <img class="w-100" src="{{response?.image}}" alt="{{response?.name}}">
+    </div>
+    <div class="col-md-4 d-flex justify-content-center">
+      <div class="p-3 pb-md-4 mx-auto">
+        <p class="fs-5 text-muted pt-md-4 text-center text-md-start mb-4 mb-md-5">{{response?.text}}</p>
+
+        <div class="text-center text-md-start mb-4 mb-md-5"><span class="h1 fw-normal pe-2 ">{{response?.price}}</span> <span class="h3 fw-light">грн</span></div>
+
+        <button type="button" class="w-100 btn btn-lg btn-primary rounded-0">Купить</button>
+      </div>
+    </div>
+  </div>
+</div>
