--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,34 @@
-<h1>main</h1>
 
 
-<nav>
-  <a routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" [routerLink]="['/']">Главная</a><br>
-  <a routerLinkActive="active" routerLink="about-us">О нас</a><br>
-  <a routerLinkActive="active" routerLink="shop/sushi">Категория Суши</a><br>
-  <a routerLinkActive="active" routerLink="shop/sushi/tovar-1"> - Товар 1</a><br>
-  <a routerLinkActive="active" routerLink="shop/sushi/tovar-2"> - Товар 2</a><br>
-  <a routerLinkActive="active" routerLink="shop/rolls">Категория Роллы</a><br>
-  <a routerLinkActive="active" routerLink="shop/rolls/tovar-4"> - Товар 4</a><br>
-</nav>
+<div class="container py-3">
+  <header class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
+    <a routerLink="/" class="d-flex align-items-center text-decoration-none justify-content-md-start justify-content-center">
+      <img class="w-50" src="assets/images/logo.png" alt="">
+    </a>
+
+    <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
+      <a routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" [routerLink]="['/']" class="me-3 py-1 text-dark text-decoration-none">Главная</a>
+      <a routerLinkActive="active" routerLink="about-us" class="me-3 py-1 text-dark text-decoration-none">О нас</a>
+      <a routerLinkActive="active" routerLink="shop/sushi" class="me-3 py-1 text-dark text-decoration-none">Суши</a>
+      <a routerLinkActive="active" routerLink="shop/rolls" class="py-1 text-dark text-decoration-none" href="#">Роллы</a>
+    </nav>
+
+    <div class="ms-4 basket-small color-ora text-orange">
+      <fa-icon [icon]="faShoppingCart"></fa-icon>
+      <span class="ms-1">{{basketCount}} грн</span>
+    </div>
+  </header>
+</div>
+
+
 <router-outlet></router-outlet>
+
+
+<footer class="mt-5 py-5 text-muted text-center bg-light">
+  <p class="mb-1 small">© 2020–{{currentYear}} SushiLe for you</p>
+  <ul class="list-inline h4">
+    <li class="list-inline-item px-1"><a href="#" class="text-orange"><fa-icon [icon]="faFacebook"></fa-icon></a></li>
+    <li class="list-inline-item px-1"><a href="#" class="text-orange"><fa-icon [icon]="faInstagram"></fa-icon></a></li>
+    <li class="list-inline-item px-1"><a href="#" class="text-orange"><fa-icon [icon]="faTwitter"></fa-icon></a></li>
+  </ul>
+</footer>
