--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,1 +1,9 @@
-<h1 *ngIf="response">{{response.h1}}</h1>
+<main>
+  <div class="position-relative overflow-hidden text-center home-main">
+    <div class="col-lg-5 p-3 p-sm-5 mx-auto my-5">
+      <h1 class="display-4 fw-normal">{{response?.h1}}</h1>
+      <p class="lead fw-normal">{{response?.text}}</p>
+      <a routerLink="shop/sushi" class="btn btn-primary">Наш каталог</a>
+    </div>
+  </div>
+</main>
