--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
 
     <div class="ms-4 basket-small color-ora text-orange">
       <fa-icon [icon]="faShoppingCart"></fa-icon>
-      <span class="ms-1">{{basketCount}} грн</span>
+      <span class="ms-1">{{basketCnt|async}} грн</span>
     </div>
   </header>
 </div>
