--- a/src/app/shop/product/product.component.html
+++ b/src/app/shop/product/product.component.html
@@ -13,7 +13,7 @@
 
         <div class="text-center text-md-start mb-4 mb-md-5"><span class="h1 fw-normal pe-2 ">{{response?.price}}</span> <span class="h3 fw-light">грн</span></div>
 
-        <button type="button" class="w-100 btn btn-lg btn-primary rounded-0">Купить</button>
+        <button (click)="addCart($event)" type="button" class="w-100 btn btn-lg btn-primary rounded-0">Купить</button>
       </div>
     </div>
   </div>
